# nexus-crm-api

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_deal_stage_history.py
scripts/: __init__.py  __main__.py  seed.py
src/: main.py
src/api/v1/: dependencies.py  helpers.py  router.py
src/api/v1/routers/: activities.py  auth.py  companies.py  contacts.py  dashboard.py  deals.py  events.py  organization.py  pipeline_stages.py  search.py  users.py
src/core/: config.py  constants.py  database.py  enums.py  exceptions.py  security.py  utils.py
src/middleware/: logging.py
src/models/: __init__.py  activity.py  base.py  company.py  contact.py  deal.py  deal_stage_history.py  organization.py  pipeline_stage.py  user.py
src/repositories/: activity.py  base.py  company.py  contact.py  dashboard.py  deal.py  organization.py  pipeline_stage.py  user.py
src/schemas/: activity.py  auth.py  common.py  company.py  contact.py  dashboard.py  deal.py  organization.py  pipeline_stage.py  user.py
src/services/: activity.py  auth.py  company.py  contact.py  dashboard.py  deal.py  onboarding.py  organization.py  pipeline_stage.py  user.py
tests/: conftest.py
tests/integration/: conftest.py  test_activities.py  test_auth.py  test_companies.py  test_contacts.py  test_dashboard.py  test_deals.py  test_pipeline_stages.py
tests/unit/: test_enums.py  test_repositories.py  test_security.py  test_services_activity.py  test_services_company.py  test_services_contact.py  test_services_dashboard.py  test_services_deal.py  test_services_organization.py  test_services_pipeline.py  test_services_user.py
