[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-crm-api"
version = "0.1.0"
description = "NexusCRM — Multi-tenant CRM REST API built with FastAPI"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",

    # Database
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",

    # Validation
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "email-validator==2.2.0",

    # Auth
    "bcrypt==4.2.1",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",

    # HTTP client (event service integration)
    "httpx==0.28.1",

    # Utilities
    "python-multipart==0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
    "anyio==4.7.0",
    "factory-boy==3.3.1",
    "faker==33.1.0",
    "ruff==0.8.4",
    "mypy==1.13.0",
    "psycopg2-binary==2.9.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "S", "C90"]
ignore = [
    "S101",   # allow assert statements (used in tests)
    "B008",   # allow Query()/Depends() in FastAPI function signatures — this is idiomatic FastAPI
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
